--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
+<link rel="icon"  type="image/png" 
+href="logo.png">
 <meta charset="UTF-8">
 <title>Hack Simulator – FULL</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
